# DubPay

./: Cargo.toml  Dockerfile.build  Dockerfile.service  README.md  build  build.rs  docker-compose.yml
build-common/: Cargo.toml
build-common/src/: lib.rs
proto/: fraud-detection.proto  notification.proto  social-service.proto  transaction.proto  user-service.proto  wallet.proto
services/api-gateway/: Cargo.toml  Dockerfile  build.rs
services/api-gateway/src/: main.rs  routes.rs
services/fraud-detection-service/: Cargo.toml  Dockerfile
services/fraud-detection-service/src/: main.rs
services/notification-service/: Cargo.toml  Dockerfile
services/notification-service/src/: main.rs
services/social-service/: Cargo.toml  Dockerfile
services/social-service/src/: main.rs
services/transaction-service/: Cargo.toml  Dockerfile
services/transaction-service/src/: main.rs
services/user-service/: Cargo.toml  Dockerfile  build.rs
services/user-service/src/: main.rs
services/wallet-service/: Cargo.toml  Dockerfile  build.rs
services/wallet-service/src/: client.rs  main.rs
social-service/: Cargo.toml
transaction-service/: Cargo.toml
