[workspace]
members = [
    "build-common",
    "services/api-gateway",
    "services/fraud-detection-service",
    "services/notification-service",
    "services/social-service",
    "services/transaction-service",
    "services/user-service",
    "services/wallet-service",
]

[workspace.dependencies]
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
tonic-build = "0.12.3"
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
