[package]
name = "wallet-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wallet_client"
path = "src/client.rs"

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
build-common = { path = "../../build-common" }
